DXP-1741: Refine according to the review